crates/plotnik-lib/tests/02-parser/recovery_validation/captured_anchor.txt
(call (a) . @x (b))
==== diagnostics ====
error: anchors cannot be captured
 --> query.ptk:1:13
  |
1 | (call (a) . @x (b))
  |             ^^
  |
help: remove the capture
  |
1 - (call (a) . @x (b))
1 + (call (a) .  (b))
  |
help: anchors constrain position and produce no value
